[gd_scene load_steps=2 format=3 uid="uid://cjbhr83hwcxkc"]

[ext_resource type="Script" uid="uid://dtlad16i424u0" path="res://scenes/particles/teleport_particles.gd" id="1_arljv"]

[node name="TeleportParticles" type="Node2D"]
script = ExtResource("1_arljv")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
randomness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
scale_amount_min = 1.7
scale_amount_max = 1.7
color = Color(0.6, 0.901961, 0.372549, 1)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
randomness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
scale_amount_min = 1.7
scale_amount_max = 1.7
color = Color(0.6, 0.901961, 0.372549, 1)

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
randomness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
scale_amount_min = 1.7
scale_amount_max = 1.7
color = Color(0.6, 0.901961, 0.372549, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
